changed the carousel image squish problem and removed the right and left button. fixed the footer being the wrong size and also making it stick to the bottom to the page

--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -1,7 +1,7 @@
 .footer {
   display: flex;
   background: #fcfbfa;
-  height: 40px;
+  height: 60px;
   width: 100%;
   justify-content: space-between;
   position: fixed;
